baml_language/crates/baml_tests/snapshots/compiles/namespaces_shadow/baml_tests__compiles__namespaces_shadow__03_ppir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== PPIR ===
class user.foo {
  x: int
}
class user.foo$stream {
  x: int | null
}
class user.foo.Bar {
  y: string
}
class user.foo.Bar$stream {
  y: string | null
}
