baml_language/crates/baml_tests/snapshots/compiles/namespaces_shadow/baml_tests__compiles__namespaces_shadow__04_5_mir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== MIR2 ===
fn user.foo.from_json(j: baml.json.json) -> foo {
    // Locals:
    let _0: foo // _0 // return
    let _1: baml.json.json // j // param
    let _2: string
    let _3: type

    bb0: {
        _2 = call const fn baml.json.stringify(copy _1) -> [bb1];
    }

    bb1: {
        _3 = load_type(foo);
        _0 = call const fn baml.json.from_string<copy _3>(copy _2) -> [bb2];
    }

    bb2: {
        return;
    }
}

fn user.foo.to_json(self: foo) -> baml.json.json {
    // Locals:
    let _0: baml.json.json // _0 // return
    let _1: foo // self // param
    let _2: baml.json.json
    let _3: int
    let _4: foo

    bb0: {
        _4 = copy _1;
        _3 = copy _4.0;
        _2 = call const fn baml.Int.to_json(copy _3) -> [bb1];
    }

    bb1: {
        _0 = { const "x": copy _2 };
        goto -> bb2;
    }

    bb2: {
        return;
    }
}

fn user.foo.Bar.from_json(j: baml.json.json) -> foo.Bar {
    // Locals:
    let _0: foo.Bar // _0 // return
    let _1: baml.json.json // j // param
    let _2: string
    let _3: type

    bb0: {
        _2 = call const fn baml.json.stringify(copy _1) -> [bb1];
    }

    bb1: {
        _3 = load_type(foo.Bar);
        _0 = call const fn baml.json.from_string<copy _3>(copy _2) -> [bb2];
    }

    bb2: {
        return;
    }
}

fn user.foo.Bar.to_json(self: foo.Bar) -> baml.json.json {
    // Locals:
    let _0: baml.json.json // _0 // return
    let _1: foo.Bar // self // param
    let _2: baml.json.json
    let _3: string
    let _4: foo.Bar

    bb0: {
        _4 = copy _1;
        _3 = copy _4.0;
        _2 = call const fn baml.String.to_json(copy _3) -> [bb1];
    }

    bb1: {
        _0 = { const "y": copy _2 };
        goto -> bb2;
    }

    bb2: {
        return;
    }
}
