baml_language/crates/baml_tests/snapshots/compiles/namespaces_shadow/baml_tests__compiles__namespaces_shadow__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 13373
---
=== COMPILER2 DIAGNOSTICS ===
  [validation] Warning: Namespace `foo` (from `ns_foo/`) shadows root-level class `foo`
   ╭─[ main.baml:3:7 ]
   │
 3 │ class foo {
   │       ─┬─  
   │        ╰─── this class is shadowed by namespace `foo`
   │ 
   │ Note: Error code: E0099
───╯
