baml_language/crates/baml_tests/snapshots/compiles/namespaces_shadow/baml_tests__compiles__namespaces_shadow__06_codegen.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function user.foo.Bar.from_json(j: baml.json.json) -> foo.Bar {
    load_var j
    call baml.json.stringify
    store_var _2
    load_type foo.Bar
    load_var _2
    call baml.json.from_string
    return
}

function user.foo.Bar.to_json(self: null) -> baml.json.json {
    load_var self
    load_field .0
    call baml.String.to_json
    load_const "y"
    alloc_map 1
    return
}

function user.foo.from_json(j: baml.json.json) -> foo {
    load_var j
    call baml.json.stringify
    store_var _2
    load_type foo
    load_var _2
    call baml.json.from_string
    return
}

function user.foo.to_json(self: null) -> baml.json.json {
    load_var self
    load_field .x
    call baml.Int.to_json
    load_const "x"
    alloc_map 1
    return
}
